5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1674_1107.log
== SUBMITION (2019-05-01 21:56:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
	if(a==0):
		a = "domingo"
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",b,"eh invalida")
else:
	print("A entrada", a, "eh invalida")
-- EXECUTION TIME:
0.146048
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
A entrada 1024 eh invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:56:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
	if(a==0):
		a = "domingo"
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",b,"eh invalida")
else:
	print("A entrada", a, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:56:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
	if(a==0):
		a = "domingo"
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- EXECUTION TIME:
0.156168
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
A entrada 6 eh invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:57:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
	if(a==0):
		a = "domingo"
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:57:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- EXECUTION TIME:
0.165624
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 28
    else:
        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:57:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- ERROR:
File "XXXX", line 28
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:58:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
		else:
			print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- EXECUTION TIME:
0.161267
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 28
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:59:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
		else:
			print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- ERROR:
File "XXXX", line 28
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:59:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
			print("Hoje eh",x, "e o dia futuro eh", y)
		else:
			print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:04:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))
#c = int(input("numero:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
		print("Hoje eh",x, "e o dia futuro eh", y)
	else:
		print("A entrada",a,"eh invalida")
else:
	print("A entrada", b, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:28:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia:"))
b = int(input("hoje:"))

x = "Hoje eh "
y = "e o dia futuro eh"

c = (a+b)%7
if( a>=0) and (a<=6):
	if(b>0):
		if(c==0):
			c = "domingo"
		elif(c==1):
			c = "segunda"
		elif(c==2):
			c = "terca"
		elif(c==3):
			c = "quarta"
		elif(c==4):
			c = "quinta"
		elif(c==5):
			c = "sexta"
		elif(c==6):
			c = "sabado"
			print("Hoje eh",x, "e o dia futuro eh", y)
		else:
			print("A entrada",a,"eh invalida")
	else:
	print("A entrada", b, "eh invalida")
-- ERROR:
File "XXXX", line 31
    print("A entrada", b, "eh invalida")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:10:10) 
-- CODE:
a = int(input('numero: '))
if not((a == 0) or (a == 1) or (a == 2) or (a == 3) or (a == 4) or (a == 5) or (a == 6)):
	print("A entrada",a,'eh invalida')
else:
	b = int(input('dias futuros: '))
	c = (a+b%7)%7
	if (a == 0) and (c == 0):
		print('Hoje eh domingo e o dia futuro eh domingo')
	elif (a == 0) and (c == 1):
		print('Hoje eh domingo e o dia futuro eh segunda')
	elif (a == 0) and (c == 2):
		print('Hoje eh domingo e o dia futuro eh terca')
	elif (a == 0) and (c == 3):
		print('Hoje eh domingo e o dia futuro eh quarta')
	elif (a == 0) and (c == 4):
		print('Hoje eh domingo e o dia futuro eh quinta')
	elif (a == 0) and (c == 5):
		print('Hoje eh domingo e o dia futuro eh sexta')
	elif (a == 0) and (c == 6):
		print('Hoje eh domingo e o dia futuro eh sabado')
	elif (a == 1) and (c == 0):
		print('Hoje eh segunda e o dia futuro eh domingo')
	elif (a == 1) and (c == 1):
		print('Hoje eh segunda e o dia futuro eh segunda')
	elif (a == 1) and (c == 2):
		print('Hoje eh segunda e o dia futuro eh terca')
	elif (a == 1) and (c == 3):
		print('Hoje eh segunda e o dia futuro eh quarta')
	elif (a == 1) and (c == 4):
		print('Hoje eh segunda e o dia futuro eh quinta')
	elif (a == 1) and (c == 5):
		print('Hoje eh segunda e o dia futuro eh sexta')
	elif (a == 1) and (c == 6):
		print('Hoje eh segunda e o dia futuro eh sabado')
	elif (a == 2) and (c == 0):
		print('Hoje eh terca e o dia futuro eh domingo')
	elif (a == 2) and (c == 1):
		print('Hoje eh terca e o dia futuro eh segunda')
	elif (a == 2) and (c == 2):
		print('Hoje eh terca e o dia futuro eh terca')
	elif (a == 2) and (c == 3):
		print('Hoje eh terca e o dia futuro eh quarta')
	elif (a == 2) and (c == 4):
		print('Hoje eh terca e o dia futuro eh quinta')
	elif (a == 2) and (c == 5):
		print('Hoje eh terca e o dia futuro eh sexta')
	elif (a == 2) and (c == 6):
		print('Hoje eh terca e o dia futuro eh sabado')
	elif (a == 3) and (c == 0):
		print('Hoje eh quarta e o dia futuro eh domingo')
	elif (a == 3) and (c == 1):
		print('Hoje eh quarta e o dia futuro eh segunda')
	elif (a == 3) and (c == 2):
		print('Hoje eh quarta e o dia futuro eh terca')
	elif (a == 3) and (c == 3):
		print('Hoje eh quarta e o dia futuro eh quarta')
	elif (a == 3) and (c == 4):
		print('Hoje eh quarta e o dia futuro eh quinta')
	elif (a == 3) and (c == 5):
		print('Hoje eh quarta e o dia futuro eh sexta')
	elif (a == 3) and (c == 6):
		print('Hoje eh quarta e o dia futuro eh sabado')
	elif (a == 4) and (c == 0):
		print('Hoje eh quinta e o dia futuro eh domingo')
	elif (a == 4) and (c == 1):
		print('Hoje eh quinta e o dia futuro eh segunda')
	elif (a == 4) and (c == 2):
		print('Hoje eh quinta e o dia futuro eh terca')
	elif (a == 4) and (c == 3):
		print('Hoje eh quinta e o dia futuro eh quarta')
	elif (a == 4) and (c == 4):
		print('Hoje eh quinta e o dia futuro eh quinta')
	elif (a == 4) and (c == 5):
		print('Hoje eh quinta e o dia futuro eh sexta')
	elif (a == 4) and (c == 6):
		print('Hoje eh quinta e o dia futuro eh sabado')
	elif (a == 5) and (c == 0):
		print('Hoje eh sexta e o dia futuro eh domingo')
	elif (a == 5) and (c == 1):
		print('Hoje eh sexta e o dia futuro eh segunda')
	elif (a == 5) and (c == 2):
		print('Hoje eh sexta e o dia futuro eh terca')
	elif (a == 5) and (c == 3):
		print('Hoje eh sexta e o dia futuro eh quarta')
	elif (a == 5) and (c == 4):
		print('Hoje eh sexta e o dia futuro eh quinta')
	elif (a == 5) and (c == 5):
		print('Hoje eh sexta e o dia futuro eh sexta')
	elif (a == 5) and (c == 6):
		print('Hoje eh sexta e o dia futuro eh sabado')
	elif (a == 6) and (c == 0):
		print('Hoje eh sabado e o dia futuro eh domingo')
	elif (a == 6) and (c == 1):
		print('Hoje eh sabado e o dia futuro eh segunda')
	elif (a == 6) and (c == 2):
		print('Hoje eh sabado e o dia futuro eh terca')
	elif (a == 6) and (c == 3):
		print('Hoje eh sabado e o dia futuro eh quarta')
	elif (a == 6) and (c == 4):
		print('Hoje eh sabado e o dia futuro eh quinta')
	elif (a == 6) and (c == 5):
		print('Hoje eh sabado e o dia futuro eh sexta')
	elif (a == 6) and (c == 6):
		print('Hoje eh sabado e o dia futuro eh sabado')
-- EXECUTION TIME:
0.13704
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
